--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,39 @@
 ---
 layout: default
 ---
-<div id="post">
-{{ content }}
-</div>
+<div class="row">
+  <div id="content" class="span11">
+  	<h1>{{page.title}}</h1>
 
-<div id="related">
-  <h2>Related Posts</h2>
-  <ul class="posts">
-    {% for post in site.related_posts limit:3 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+    {{ content }}
+
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'sridattalabs'; // required: replace example with your forum shortname
+        var disqus_identifier = "{{page.title}}";
+        var disqus_developer = true;
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+
+  </div> 
+  <div id="blog-sidebar" class="span4">
+    <header>
+    <h1>
+      Sridatta's Blog
+      <br />
+      <small>Experiments and escapades of a dreamer</small>
+    </h1>
+    </header>
+    <a href="/index.html">Sridatta's homepage</a><br>
+    <a href="#">Read more articles</a>
+  </div>
+</div> <!-- .row -->
