--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="row">
   <div id="content" class="span11">
-  	<h1>{{page.title}}</h1>
+  	<a href="{{page.url}}"><h1>{{page.title}}</h1></a>
 
     {{ content }}
 
