--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,19 @@ layout: default
   <div id="content" class="span11">
   	<a href="{{page.url}}"><h1>{{page.title}}</h1></a>
 
+    <!-- AddThis Button BEGIN -->
+    <div class="addthis_toolbox addthis_default_style ">
+    <a class="addthis_button_preferred_1"></a>
+    <a class="addthis_button_preferred_2"></a>
+    <a class="addthis_button_preferred_3"></a>
+    <a class="addthis_button_preferred_4"></a>
+    <a class="addthis_button_compact"></a>
+    <a class="addthis_counter addthis_bubble_style"></a>
+    </div>
+    <br />
+    <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4f1a89537372a6b7"></script>
+    <!-- AddThis Button END -->
+
     {{ content }}
 
     <div id="disqus_thread"></div>
