Fixed blog sidebar to point to doc root

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,7 @@ layout: default
       <small>Experiments and escapades of a dreamer</small>
     </h1>
     </header>
-    <a href="/index.html">Sridatta's homepage</a><br>
+    <a href="/">Sridatta's homepage</a><br>
     <a href="#">Read more articles</a>
   </div>
 </div> <!-- .row -->
