--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Sridatta Thatipamala - Developer and Entrepreneur</title>
+  <title>Sridatta Thatipamala - Developer and Entrepreneur</title>
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-28422161-1']);
+    _gaq.push(['_setDomainName', 'sridattalabs.com']);
+    _gaq.push(['_setAllowLinker', true]);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+  </script>
+
 	<link rel="stylesheet" type="text/css" href="/public/bootstrap.css" />
   <link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="/public/style.css" />
@@ -24,10 +40,10 @@
   </footer>
 </div>
 
-</body>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
 <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shAutoloader.js" type="text/javascript"></script>
 <script src="/public/script.js" type="text/javascript"></script>
 
+</body>
 </html>
