--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-  <title>Sridatta Thatipamala - Developer and Entrepreneur</title>
+  <title>{{page.title}} : Sridatta Thatipamala - Developer and Entrepreneur</title>
   <script type="text/javascript">
 
     var _gaq = _gaq || [];
