add RSS meta tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8" />
   <title>{{page.title}} : Sridatta Thatipamala - Developer and Entrepreneur</title>
+  <link rel="alternate" type="application/rss+xml" title="Sridatta's Blog" href="http://feeds.feedburner.com/sridatta" />
   <script type="text/javascript">
 
     var _gaq = _gaq || [];
