increase blog font size

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,8 +16,9 @@ layout: blog
 <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4f1a89537372a6b7"></script>
 <!-- AddThis Button END -->
 
+<div class="blog-content">
 {{ content }}
-
+</div>
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
