--- a/public/style.css
+++ b/public/style.css
@@ -39,3 +39,8 @@ div.section {
 .syntaxhighlighter code {
   background-color: inherit;
 }
+
+.blog-content p {
+  font-size: 1.2em;
+  line-height: 150%;
+}
