--- a/public/style.css
+++ b/public/style.css
@@ -2,14 +2,83 @@ body {
   border-top: 4px solid orange;
   background-color: ivory;
   padding-top: 10px;
+  font-size:17px;
+  line-height:1.5em;
+  margin:0;
+  padding:0;
 }
 
 a {
   color: #a82300;
 }
 
+h1,h2,h3,h4 {
+  color:#333;
+  line-height:1.2em;
+}
+
+h1 {
+  font-size:1.8em;
+  margin:.8em 0 .2em;
+}
+
+h2 {
+  font-size:1.5em;
+  margin:1.2em 0 .6em;
+}
+
+h3 {
+  font-size:1.3em;
+  color:#999;
+  margin:1.2em 0 .6em;
+}
+
+h4 {
+  font-size:1.1em;
+  color:#999;
+  margin:1.2em 0 .6em;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Cabin", sans-serif;
+}
+
+p {
+  font-size:1em;
+  line-height:1.6em;
+  margin:1em 0;
+}
+
+p code {
+  font-size:12px;
+  background-color:#eee;
+  border:1px solid #999;
+  border-radius:3px;
+  white-space:nowrap;
+  padding:2px 4px;
+}
+
+blockquote {
+  border:1px solid #ccc;
+  background-color:#F7F7F7;
+  font-style:italic;
+  color:#555;
+  padding:.7em 2em;
+}
+
+ul {
+  margin-top:.5em;
+  margin-bottom:1.5em;
+}
+
+abbr[title] {
+  border-bottom:1px dotted #999;
+}
+
+img,iframe,object,embed,audio,video {
+  display:block;
+  max-width:100%;
+  margin:20px auto;
 }
 
 #headshot {
@@ -22,14 +91,28 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 
+#job-title {
+  font-size:18px;
+  color:#BFBFBF;
+}
 
-#header .lead{
+#tagline {
   font-size:24px;
   line-height:30px;
 }
 
-div.section {
-  margin-top: 20px;
+ul.pretty-list {
+  list-style: none;
+  margin: 20px 0 30px 0;
+  padding:0;
+}
+
+ul.pretty-list > li {
+  margin: 20px 0;
+}
+
+p.byline {
+  margin:0;
 }
 
 .syntaxhighlighter .container {
@@ -38,9 +121,4 @@ div.section {
 
 .syntaxhighlighter code {
   background-color: inherit;
-}
-
-.blog-content p {
-  font-size: 1.2em;
-  line-height: 150%;
 }
