--- a/public/style.css
+++ b/public/style.css
@@ -101,6 +101,18 @@ img,iframe,object,embed,audio,video {
   line-height:30px;
 }
 
+ul.inline {
+  list-style: none;
+}
+
+ul.inline > li {
+  display:inline;
+}
+
+ul.inline img {
+  display: inline-block;
+}
+
 ul.pretty-list {
   list-style: none;
   margin: 20px 0 30px 0;
@@ -113,6 +125,17 @@ ul.pretty-list > li {
 
 p.byline {
   margin:0;
+}
+
+img.icon {
+  margin:2px 10px 0 0;
+  -webkit-transition: margin 0.5s ease-out;
+  -moz-transition: margin 0.5s ease-out;
+  -o-transition: margin 0.5s ease-out;
+}
+
+img.icon:hover {
+  margin-top:0px;
 }
 
 .syntaxhighlighter .container {
