--- a/public/style.css
+++ b/public/style.css
@@ -78,7 +78,7 @@ abbr[title] {
 img,iframe,object,embed,audio,video {
   display:block;
   max-width:100%;
-  margin:20px auto;
+  margin:20px 0px;
 }
 
 #headshot {
