--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-  <title>{{page.title}} : Sridatta Thatipamala - Developer and Entrepreneur</title>
+  <title>{{page.title}} : Sridatta Thatipamala</title>
   <link rel="alternate" type="application/rss+xml" title="Sridatta's Blog" href="http://feeds.feedburner.com/sridatta" />
   <script type="text/javascript">
 
@@ -20,6 +20,9 @@
 
   </script>
 
+  <script type="text/javascript" src="//use.typekit.net/dsm7vnp.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script> 
+
 	<link rel="stylesheet" type="text/css" href="/public/bootstrap.css" />
   <link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="/public/style.css" />
@@ -31,15 +34,8 @@
 </head>
 
 <body id="home">
-<div class="container">
-
 
   {{ content }}
-
-  <footer> 
-    <p class="small">Copyright 2012 by Sridatta Thatipamala. Don't hate me. Just dance.</p>
-  </footer>
-</div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
