--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,37 +1,36 @@
 ---
-layout: blog
+layout: default
 ---
-<a href="{{page.url}}"><h1>{{page.title}}</h1></a>
+<div class="container">
+  <div class="row">
+    <div id="content" class="span16"> 
+      <div class="row">
+        <div class="header">
+          <a href="{{page.url}}"><h1>{{page.title}}</h1></a>
+        </div>
+      </div>
 
-<!-- AddThis Button BEGIN -->
-<div class="addthis_toolbox addthis_default_style ">
-<a class="addthis_button_preferred_1"></a>
-<a class="addthis_button_preferred_2"></a>
-<a class="addthis_button_preferred_3"></a>
-<a class="addthis_button_preferred_4"></a>
-<a class="addthis_button_compact"></a>
-<a class="addthis_counter addthis_bubble_style"></a>
+      <div class="row">
+        <div class="blog-content span10 offset3">
+          {{ content }}
+        </div> 
+      </div>
+
+    </div>
+  </div>
 </div>
-<br />
-<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4f1a89537372a6b7"></script>
-<!-- AddThis Button END -->
 
-<div class="blog-content">
-{{ content }}
-</div>
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'sridattalabs'; // required: replace example with your forum shortname
-    var disqus_identifier = "{{page.title}}";
-    var disqus_developer = true;
+<footer> 
+  <div class="container">
+    <div class="row">
+      <div class="blog-content span10 offset3">
+        <h2>by Sridatta Thatipamala</h2>
+        <p>
+          Sridatta is a self-proclaimed technologist, humorist and Renaissance man.
+          Few others agree with this proclamation.
+        </p>
+      </div>
+    </div>
+  </div>
+</footer>
 
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
